# fehler_core

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml  requirements.txt  requirements_dev.txt
board/: models.py  serializers.py  urls.py  views.py
board/migrations/: 0001_initial.py  0002_auto_20220208_0826.py  0003_auto_20220209_1737.py  0004_auto_20220209_1746.py  0005_auto_20220209_1746.py  0006_task_date_due.py  0007_auto_20220211_1805.py  0008_auto_20220212_0319.py  0009_auto_20220212_0348.py  0010_auto_20220212_1452.py  0011_auto_20220215_0620.py  0012_auto_20220217_1443.py
boards/: admin.py  models.py  serializers.py  urls.py  views.py
boards/migrations/: 0001_initial.py  0002_auto_20220330_1717.py  0003_auto_20220402_1803.py  0004_task_priority.py  0005_auto_20220403_0607.py
fehler_auth/: admin.py  apps.py  authentication.py  forms.py  managers.py  models.py  serializers.py  urls.py  utils.py  views.py
fehler_auth/migrations/: 0001_initial.py  0002_auto_20211002_1511.py  0002_invite.py  0003_auto_20220416_1626.py  0003_invite_space.py  0004_auto_20220416_1714.py  0004_invite_member_type.py
fehler_core/: settings.py  urls.py  wsgi.py
projects/: admin.py  models.py  serializers.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_auto_20220121_1355.py  0002_auto_20220121_2113.py  0002_auto_20220124_1503.py  0002_auto_20220205_1142.py  0002_project_space.py  0003_auto_20220121_1400.py  0003_auto_20220121_2116.py  0003_project_description.py  (+12 more)
spaces/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
(+11 files in other folders)
